--- a/public/css/site.css
+++ b/public/css/site.css
@@ -123,3 +123,14 @@ body {
 .pdfcontrol{
     visibility:hidden;
 }
+
+.hero.is-info {
+    background: linear-gradient(
+        rgba(0, 0, 0, 0.5),
+        rgba(0, 0, 0, 0.5)
+      ), url('/landing.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
