--- a/views/Home.hbs
+++ b/views/Home.hbs
@@ -3,13 +3,14 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>DHA Gujranwala</title>
+    <title>AN Video Chat</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-teal.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="/css/site.css">
+
+
     <script>
         const showAlertMsg = () => {
             navigator.getMedia = (navigator.getUserMedia || // use the proper vendor prefix
@@ -39,28 +40,83 @@
 
 
 <body>
-    <div class="w3-container w3-card-4 w3-light-grey w3-text-blue" style="margin:10%;">
-        <h2 class="w3-center">WebRTC Video Chat</h2>
 
+    <section class="hero is-info is-fullheight">
+        <div class="hero-head">
+            <nav class="navbar">
+                <div class="container">
+                    <div class="navbar-brand">
+                        <a class="navbar-item" href="/">
 
-        <div class="w3-row w3-section">
-            <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-phone"></i></div>
-            <div class="w3-rest">
-                <input class="w3-input w3-border" id="roomname" name="roomname" type="text" placeholder="Room Name">
+                        </a>
+                        <span class="navbar-burger burger" data-target="navbarMenu">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </span>
+                    </div>
+                    <div id="navbarMenu" class="navbar-menu">
+                        <div class="navbar-end">
+
+                            <span class="navbar-item">
+                                <a class="button is-white is-outlined" href="#">
+                                    <span class="icon">
+                                        <i class="fa fa-superpowers"></i>
+                                    </span>
+                                    <span>Examples</span>
+                                </a>
+                            </span>
+
+                            <span class="navbar-item">
+                                <a class="button is-white is-outlined" href="#">
+                                    <span class="icon">
+                                        <i class="fa fa-github"></i>
+                                    </span>
+                                    <span>View Source</span>
+                                </a>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </div>
+
+        <div class="hero-body">
+            <div class="container has-text-centered">
+                <div class="column is-6 is-offset-3">
+                    <h1 class="title">
+                        AN Video Chat
+                    </h1>
+                    <h2 class="subtitle">
+                        Secure Video Chat using P2P Web RTC for upto 4 persons.
+                    </h2>
+                    <div class="box">
+                        <div class="field">
+                            <p class="control has-icons-left has-icons-right">
+                                <input class="input is-large is-primary" id="roomname" name="roomname" placeholder="Room Name">
+                                <span class="icon is-small is-left">
+                                    <i class="fa fa-phone"></i>
+                                </span>
+                             
+                            </p>
+                        </div>
+                        <div class="field">
+                            <p class="control has-icons-left">
+                                <input class="input is-large is-primary" name="username" id="username" placeholder="Username">
+                                <span class="icon is-small is-left">
+                                    <i class="fa fa-pencil"></i>
+                                </span>
+                            </p>
+                        </div>
+                        <button class="button is-large is-primary is-fullwidth" onclick="showAlertMsg()"> Join </button>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <div class="w3-row w3-section">
-            <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-pencil"></i></div>
-            <div class="w3-rest">
-                <input class="w3-input w3-border" name="username" id="username" type="text" placeholder="Username">
-            </div>
-        </div>
-        <p class="w3-center">
-            <button class="w3-button w3-section w3-blue w3-ripple" onclick="showAlertMsg()"> Join </button>
-        </p>
+    </section>
 
-    </div>
+
 
 </body>
 
