--- a/views/Home.hbs
+++ b/views/Home.hbs
@@ -24,7 +24,7 @@
             localStorage["UserName"] = username;
 
             navigator.getMedia({ video: true }, function () {
-                window.location.href = '/videoconf.html';
+                window.location.href = '/Call';
             }, function () {
 
                 alert("You do not have a web cam attached.");
